adds initial firebase setup/files with manifest

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 .grunt
 
 # Bower dependency directory (https://bower.io/)
-bower_components
+**/bower_components
 
 # node-waf configuration
 .lock-wscript
@@ -55,5 +55,5 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+*.env
 
